--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -1,5 +1,9 @@
 
-SUBDIRS = interfaces signalprocessor video
+if BUILD_EXPERIMENTAL
+EXPERIMENTAL_LIBS=basecamerabinsrc
+endif
+
+SUBDIRS = $(EXPERIMENTAL_LIBS) interfaces signalprocessor video
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = interfaces signalprocessor video
+DIST_SUBDIRS = $(EXPERIMENTAL_LIBS) interfaces signalprocessor video
