camerabin2: Rename v4l2camerasrc to wrappercamerabinsrc
Use a better name for the element that wraps single pad src element
into a 3pad source required by camerabin2.

--- a/gst/camerabin2/Makefile.am
+++ b/gst/camerabin2/Makefile.am
@@ -4,7 +4,7 @@ libgstcamerabin2_la_SOURCES = gstviewfinderbin.c \
 				gstimagecapturebin.c \
 				gstvideorecordingbin.c \
 				camerabingeneral.c \
-				gstv4l2camerasrc.c \
+				gstwrappercamerabinsrc.c \
 				gstcamerabin2.c \
 				gstplugin.c
 
@@ -26,5 +26,5 @@ noinst_HEADERS = gstviewfinderbin.h \
 		gstimagecapturebin.h \
 		gstvideorecordingbin.h \
 		camerabingeneral.h \
-		gstv4l2camerasrc.h \
+		gstwrappercamerabinsrc.h \
 		gstcamerabin2.h
