element-maker: improve generation of several classes
Better creation of pads, test and fix many other classes.  Most
classes work now, although might not create functional elements.

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -17,4 +17,8 @@ EXTRA_DIST = \
 	gstelement.c \
 	gstpushsrc.c \
 	gsttagdemux.c \
-	gstvideosink.c
+	gstvideosink.c \
+	sinkpad.c \
+	sinkpad-simple.c \
+	srcpad.c \
+	srcpad-simple.c
