--- a/gst/autoconvert/Makefile.am
+++ b/gst/autoconvert/Makefile.am
@@ -1,6 +1,6 @@
 plugin_LTLIBRARIES = libgstautoconvert.la
 
-libgstautoconvert_la_SOURCES = gstautoconvert.c gstautoconvert.h
+libgstautoconvert_la_SOURCES = gstautoconvert.c gstautoconvert.h gstautocolorspace.c gstautcolorspace.h plugin.c
 
 libgstautoconvert_la_CFLAGS = $(GST_CFLAGS)
 libgstautoconvert_la_LIBADD = $(GST_LIBS)
