--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,24 +1,28 @@
 
+templatefiles=\
+	element-templates/audiofilter \
+	element-templates/audiosink \
+	element-templates/audiosrc \
+	element-templates/base \
+	element-templates/baseaudiosink \
+	element-templates/baseaudiosrc \
+	element-templates/basertpdepayload \
+	element-templates/basertppayload \
+	element-templates/basesink \
+	element-templates/basesrc \
+	element-templates/basetransform \
+	element-templates/cddabasesrc \
+	element-templates/element \
+	element-templates/gobject \
+	element-templates/pushsrc \
+	element-templates/sinkpad \
+	element-templates/sinkpad-simple \
+	element-templates/srcpad \
+	element-templates/srcpad-simple \
+	element-templates/tagdemux \
+	element-templates/videosink
+
 EXTRA_DIST = \
-	element-maker \
-	base.c \
-	gobject.c \
-	gstaudiofilter.c \
-	gstaudiosink.c \
-	gstaudiosrc.c \
-	gstbaseaudiosink.c \
-	gstbaseaudiosrc.c \
-	gstbasertpdepayload.c \
-	gstbasertppayload.c \
-	gstbasesink.c \
-	gstbasesrc.c \
-	gstbasetransform.c \
-	gstcddabasesrc.c \
-	gstelement.c \
-	gstpushsrc.c \
-	gsttagdemux.c \
-	gstvideosink.c \
-	sinkpad.c \
-	sinkpad-simple.c \
-	srcpad.c \
-	srcpad-simple.c
+	gst-element-maker \
+	$(templatefiles)
+
