--- a/tests/examples/encoding/Makefile.am
+++ b/tests/examples/encoding/Makefile.am
@@ -5,7 +5,8 @@ EXTRA_DIST = gstcapslist.h
 
 noinst_PROGRAMS = $(examples)
 
-LDADD = $(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-@GST_MAJORMINOR@.la\
-	-lgstpbutils-@GST_MAJORMINOR@
+LDADD = $(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-@GST_MAJORMINOR@.la \
 	$(GST_LIBS)
-AM_CFLAGS = -I$(top_builddir)/gst-libs $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
+AM_CFLAGS = -I$(top_builddir)/gst-libs \
+	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_CFLAGS)
