--- a/Makefile.am
+++ b/Makefile.am
@@ -52,6 +52,7 @@ CRUFT_FILES = \
 	$(top_builddir)/gst/shapewipe/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/imagefreeze/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/sys/oss4/.libs/*.{so,dll,DLL,dylib} \
+	$(top_builddir)/tests/check/elements/autocolorspace \
 	$(top_builddir)/tests/check/elements/capssetter \
 	$(top_builddir)/tests/check/elements/imagefreeze \
 	$(top_builddir)/tests/check/pipelines/metadata \
