--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -3,7 +3,7 @@ if BUILD_EXPERIMENTAL
 EXPERIMENTAL_LIBS=basecamerabinsrc
 endif
 
-SUBDIRS = $(EXPERIMENTAL_LIBS) interfaces signalprocessor video
+SUBDIRS = interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = $(EXPERIMENTAL_LIBS) interfaces signalprocessor video
+DIST_SUBDIRS = interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
