--- a/tests/check/elements/.gitignore
+++ b/tests/check/elements/.gitignore
@@ -7,6 +7,7 @@ assrender
 autoconvert
 autovideoconvert
 camerabin
+camerabin2
 deinterleave
 dataurisrc
 faac
@@ -39,6 +40,7 @@ timidity
 y4menc
 valve
 videorecordingbin
+viewfinderbin
 vp8dec
 vp8enc
 zbar
