checks: enable input-selector and output-selector unit tests after move

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -78,6 +78,7 @@ REGISTRY_CHECKS =				\
 	elements/filesrc			\
 	elements/identity			\
 	elements/multiqueue			\
+	elements/selector			\
 	elements/tee			  	\
 	elements/queue                          \
 	elements/valve                          \
