selector: move input-selector and output-selector to core
https://bugzilla.gnome.org/show_bug.cgi?id=614306

--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -21,5 +21,7 @@ else
 CAMERABIN2=
 endif
 
-SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES) $(JACK_EXAMPLES) switch
-DIST_SUBDIRS= camerabin $(CAMERABIN2) directfb jack mxf scaletempo switch
+SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES) $(JACK_EXAMPLES)
+DIST_SUBDIRS= camerabin $(CAMERABIN2) directfb jack mxf scaletempo
+
+include $(top_srcdir)/common/parallel-subdirs.mak
