--- a/Makefile.am
+++ b/Makefile.am
@@ -50,14 +50,18 @@ CRUFT_FILES = \
 	$(top_builddir)/gst/amrparse/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/flacparse/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/imagefreeze/.libs/*.{so,dll,DLL,dylib} \
+	$(top_builddir)/gst/selector/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/shapewipe/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/valve/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/sys/oss4/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/tests/check/elements/autocolorspace \
 	$(top_builddir)/tests/check/elements/capssetter \
 	$(top_builddir)/tests/check/elements/imagefreeze \
+	$(top_builddir)/tests/check/elements/selector \
 	$(top_builddir)/tests/check/elements/valve \
 	$(top_builddir)/tests/check/pipelines/metadata \
+	$(top_builddir)/tests/examples/switch/switcher \
+	$(top_builddir)/tests/icles/output-selector-test \
 	$(top_builddir)/tests/icles/test-oss4
 
 CRUFT_DIRS = \
@@ -65,9 +69,11 @@ CRUFT_DIRS = \
 	$(top_srcdir)/gst/amrparse \
 	$(top_srcdir)/gst/flacparse \
 	$(top_srcdir)/gst/imagefreeze \
+	$(top_srcdir)/gst/selector \
 	$(top_srcdir)/gst/shapewipe \
 	$(top_srcdir)/gst/valve \
 	$(top_srcdir)/tests/examples/shapewipe \
+	$(top_srcdir)/tests/examples/switch \
 	$(top_srcdir)/ext/alsaspdif \
 	$(top_srcdir)/ext/ivorbis \
 	$(top_srcdir)/ext/metadata 
