jack: move plugin to gst-plugins-good
https://bugzilla.gnome.org/show_bug.cgi?id=621929

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,6 +46,7 @@ CRUFT_FILES = \
 	$(top_builddir)/common/shave-libtool \
 	$(top_builddir)/ext/alsaspdif/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/ext/ivorbis/.libs/*.{so,dll,DLL,dylib} \
+	$(top_builddir)/ext/jack/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/aacparse/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/amrparse/.libs/*.{so,dll,DLL,dylib} \
 	$(top_builddir)/gst/flacparse/.libs/*.{so,dll,DLL,dylib} \
@@ -60,6 +61,7 @@ CRUFT_FILES = \
 	$(top_builddir)/tests/check/elements/selector \
 	$(top_builddir)/tests/check/elements/valve \
 	$(top_builddir)/tests/check/pipelines/metadata \
+	$(top_builddir)/tests/examples/jack/jack_client \
 	$(top_builddir)/tests/examples/switch/switcher \
 	$(top_builddir)/tests/icles/output-selector-test \
 	$(top_builddir)/tests/icles/test-oss4
@@ -74,8 +76,10 @@ CRUFT_DIRS = \
 	$(top_srcdir)/gst/valve \
 	$(top_srcdir)/tests/examples/shapewipe \
 	$(top_srcdir)/tests/examples/switch \
+	$(top_srcdir)/tests/examples/jack \
 	$(top_srcdir)/ext/alsaspdif \
 	$(top_srcdir)/ext/ivorbis \
+	$(top_srcdir)/ext/jack \
 	$(top_srcdir)/ext/metadata 
 
 include $(top_srcdir)/common/cruft.mak
