--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -1,9 +1,4 @@
 if HAVE_GTK
-if USE_JACK
-JACK_EXAMPLES=jack
-else
-JACK_EXAMPLES=
-endif
 GTK_EXAMPLES=camerabin mxf scaletempo camerabin2
 else
 GTK_EXAMPLES=
@@ -21,7 +16,7 @@ else
 CAMERABIN2=
 endif
 
-SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES) $(JACK_EXAMPLES)
-DIST_SUBDIRS= camerabin $(CAMERABIN2) directfb jack mxf scaletempo
+SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES)
+DIST_SUBDIRS= camerabin $(CAMERABIN2) directfb mxf scaletempo
 
 include $(top_srcdir)/common/parallel-subdirs.mak
