--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -1,5 +1,11 @@
-SUBDIRS = audiofx equalizer level pulse rtp shapewipe spectrum v4l2
+if USE_JACK
+JACK_DIR=jack
+else
+JACK_DIR=
+endif
 
-DIST_SUBDIRS = audiofx equalizer level pulse rtp shapewipe spectrum v4l2
+SUBDIRS = audiofx equalizer $(JACK_DIR) level pulse rtp shapewipe spectrum v4l2
+
+DIST_SUBDIRS = audiofx equalizer jack level pulse rtp shapewipe spectrum v4l2
 
 include $(top_srcdir)/common/parallel-subdirs.mak
