--- a/tests/examples/jack/Makefile.am
+++ b/tests/examples/jack/Makefile.am
@@ -1,4 +1,10 @@
-noinst_PROGRAMS = jack_client
+if HAVE_GTK
+GTK_EXAMPLES=jack_client
+else
+GTK_EXAMPLES=
+endif
+
+noinst_PROGRAMS = $(GTK_EXAMPLES)
 
 jack_client_SOURCES = jack_client.c
 jack_client_CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS) $(JACK_CFLAGS)
