--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -7,19 +7,14 @@ EXTRA_DIST = \
 	as-slurp-ffmpeg.m4 \
 	check-libheader.m4 \
 	codeset.m4 \
-	esd.m4 \
 	freetype2.m4 \
 	gconf-2.m4 \
 	gettext.m4 \
 	glibc21.m4 \
-	glib.m4 \
 	gst-artsc.m4 \
 	gst-fionread.m4 \
-	gst-matroska.m4 \
 	gst-sdl.m4 \
-	gst-shout2.m4 \
 	gst-sid.m4 \
-	gtk.m4 \
 	iconv.m4 \
 	intdiv0.m4 \
 	inttypes_h.m4 \
@@ -32,8 +27,6 @@ EXTRA_DIST = \
 	lib-prefix.m4 \
 	lrintf.m4 \
 	lrint.m4 \
-	ogg.m4 \
 	progtest.m4 \
 	stdint_h.m4 \
-	uintmax_t.m4 \
-	vorbis.m4
+	uintmax_t.m4
