build: fix disting of experimental basecamerabinsrc lib used by camerabin2
https://bugzilla.gnome.org/show_bug.cgi?id=638604

--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -1,4 +1,3 @@
-
 if BUILD_EXPERIMENTAL
 EXPERIMENTAL_LIBS=basecamerabinsrc
 endif
@@ -6,4 +5,4 @@ endif
 SUBDIRS = interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
+DIST_SUBDIRS = interfaces signalprocessor video basecamerabinsrc
