basecamerabinsrc: fix libs order in Makefile.am

--- a/gst-libs/gst/basecamerabinsrc/Makefile.am
+++ b/gst-libs/gst/basecamerabinsrc/Makefile.am
@@ -19,8 +19,8 @@ libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_CFLAGS = \
 	$(GST_CFLAGS)
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_LIBADD = \
         $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
-	$(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS) \
-	-lgstinterfaces-$(GST_MAJORMINOR)
+	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-$(GST_MAJORMINOR) \
+	$(GST_BASE_LIBS) $(GST_LIBS)
 
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
