examples: dist camerabin2 example as well
https://bugzilla.gnome.org/show_bug.cgi?id=638604

--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -17,6 +17,6 @@ CAMERABIN2=
 endif
 
 SUBDIRS= $(DIRECTFB_DIR) $(GTK_EXAMPLES)
-DIST_SUBDIRS= camerabin $(CAMERABIN2) directfb mxf scaletempo
+DIST_SUBDIRS= camerabin camerabin2 directfb mxf scaletempo
 
 include $(top_srcdir)/common/parallel-subdirs.mak
