--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -151,7 +151,8 @@ VALGRIND_TO_FIX = \
 noinst_PROGRAMS = $(check_libvisual)
 
 AM_CFLAGS = $(GST_CFLAGS) $(GST_CHECK_CFLAGS) \
-	-DGST_TEST_FILES_PATH="\"$(TEST_FILES_DIRECTORY)\""
+	-DGST_TEST_FILES_PATH="\"$(TEST_FILES_DIRECTORY)\"" \
+	-UG_DISABLE_ASSERT -UG_DISABLE_CAST_CHECKS
 LDADD = $(GST_LIBS) $(GST_CHECK_LIBS)
 
 # valgrind testing
