tests: fix CFLAGS and LIBADD order in Makefile.am

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -186,43 +186,39 @@ AM_CFLAGS = $(GST_CHECK_CFLAGS) $(GST_OPTION_CFLAGS) \
 LDADD = $(GST_CHECK_LIBS)
 
 elements_camerabin_CFLAGS = \
-        -I$(top_builddir)/gst-libs \
-        $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-        $(GST_PLUGINS_BAD_CFLAGS) $(GST_CHECK_CFLAGS) $(AM_CFLAGS) \
-        -DGST_USE_UNSTABLE_API
+	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
+	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_camerabin_LDADD = \
-        $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
-        $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
-        $(GST_CHECK_LIBS) \
-         -lgstinterfaces-@GST_MAJORMINOR@
+	$(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
+	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-@GST_MAJORMINOR@ \
+	$(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS)
+
 elements_camerabin_SOURCES = elements/camerabin.c
 
 if BUILD_EXPERIMENTAL
 elements_camerabin2_CFLAGS = \
-        -I$(top_builddir)/gst-libs \
-        $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-        $(GST_PLUGINS_BAD_CFLAGS) $(GST_CHECK_CFLAGS) $(AM_CFLAGS) \
-        -DGST_USE_UNSTABLE_API
+	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
+	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_camerabin2_LDADD = \
         $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
         $(top_builddir)/gst-libs/gst/basecamerabinsrc/libgstbasecamerabinsrc-@GST_MAJORMINOR@.la \
-        $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
-        $(GST_CHECK_LIBS)
+        $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS) 
 elements_camerabin2_SOURCES = elements/camerabin2.c
 
 elements_imagecapturebin_CFLAGS = \
-        -I$(top_builddir)/gst-libs \
-        $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-        $(GST_CHECK_CFLAGS) $(AM_CFLAGS) \
-        -DGST_USE_UNSTABLE_API
+	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
+	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_imagecapturebin_LDADD = \
-        $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
-        $(GST_CHECK_LIBS) -lgstapp-@GST_MAJORMINOR@
+	$(GST_PLUGINS_BASE_LIBS) -lgstapp-@GST_MAJORMINOR@ \
+	$(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS)
 elements_imagecapturebin_SOURCES = elements/imagecapturebin.c
 endif
 
-elements_jifmux_CFLAGS = $(GST_CHECK_CFLAGS) $(GST_OPTION_CFLAGS) $(AM_CFLAGS) $(EXIF_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-elements_jifmux_LDADD = $(GST_CHECK_LIBS) $(EXIF_LIBS) $(LDADD) $(GST_PLUGINS_BASE_LIBS) -lgsttag-$(GST_MAJORMINOR)
+elements_jifmux_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_OPTION_CFLAGS) $(AM_CFLAGS) $(EXIF_CFLAGS)
+elements_jifmux_LDADD = $(GST_PLUGINS_BASE_LIBS) -lgsttag-$(GST_MAJORMINOR) $(GST_CHECK_LIBS) $(EXIF_LIBS) $(LDADD)
 elements_jifmux_SOURCES = elements/jifmux.c
 
 elements_timidity_CFLAGS = $(GST_BASE_CFLAGS) $(AM_CFLAGS)
@@ -232,10 +228,10 @@ elements_kate_CFLAGS = $(GST_BASE_CFLAGS) $(AM_CFLAGS)
 elements_kate_LDADD = $(GST_BASE_LIBS) $(LDADD)
 
 elements_rtpmux_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(AM_CFLAGS)
-elements_rtpmux_LDADD = $(GST_BASE_LIBS) $(LDADD) -lgstrtp-0.10
+elements_rtpmux_LDADD = $(GST_PLUGINS_BASE_LIBS) -lgstrtp-0.10 $(GST_BASE_LIBS) $(LDADD)
 
 elements_assrender_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(AM_CFLAGS)
-elements_assrender_LDADD = $(GST_BASE_LIBS) $(LDADD) -lgstvideo-0.10 -lgstapp-0.10
+elements_assrender_LDADD = $(GST_PLUGINS_BASE_LIBS) -lgstvideo-0.10 -lgstapp-0.10 $(GST_BASE_LIBS) $(LDADD)
 
 # parser unit test convenience lib
 noinst_LTLIBRARIES = libparser.la
